# wallhaven-desktop

./: README.md  farm.config.ts  index.js  nyxbui.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: release.yml
backend/: package.json  pnpm-lock.yaml
backend/src/: app.controller.ts
src/: App.tsx  App.vue  config.ts  declare.ts  main.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  system_tray_menu.rs
src/components/: AppLineChart.vue  AppLogo.vue  AppPage.vue  AppPageBottomBar.vue  AppPageContent.vue  AppPageHeader.vue  AppSidebar.vue  AppSidebarAccount.vue  AppSidebarItem.vue  AppTopBar.vue  interactiveResolutionPicker.tsx  mode-toggle.tsx  wallpaper-preview-dialog.tsx  water-fall.tsx
src/components/blocks/: expandable-card-demo-grid.tsx  expandable-card-demo-standard.tsx
src/components/passionBtn/: fancy.css  index.tsx
src/components/swiper/: index.tsx
src/components/ui/: badge.tsx  button.tsx  cards-carousel.tsx  dialog.tsx  dock.tsx  image.tsx  input.tsx  link.tsx  loading.tsx  parallax-scroll.tsx  sidebar.tsx
src/composables/: index.ts  useChart.ts  useDark.ts
src/hooks/: use-calculative-width.ts  use-listen-download.ts  use-outside-click.ts
src/lib/: utils.ts
src/pages/: layout.vue  sign-in.vue
src/pages/layout/: home.vue  setting.vue
src/router/: index.ts
src/styles/: global.less  themes.ts
src/views/ai/: index.tsx
src/views/home/: index.tsx
src/views/setting/: index.tsx
