[package]
name = "wallhaven-desktop"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "protocol-asset", "os-all", "fs-all", "process-relaunch", "path-all", "global-shortcut-all", "dialog-ask", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
image = "0.24.6"
mio = '^1.0.1'
reqwest = { version = "0.12.7", features = ["stream"] }
futures-util = "0.3"
winapi = { version = "0.3", features = ["winuser", "winreg"] }
log = "0.4"
env_logger = "0.10"
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
